clusters/cl01tl/manifests/immich/HTTPRoute-http-route-immich.yaml
---
# Source: immich/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-immich
  namespace: immich
  labels:
    app.kubernetes.io/name: http-route-immich
    app.kubernetes.io/instance: immich
    app.kubernetes.io/part-of: immich
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - immich.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: immich-main
          port: 2283
          weight: 100
